# django-sql-middleware-package

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: release.yml
tests/: settings.py  test_new.py
tests/demo_app/: models.py  urls.py  views.py
wncfe-sql-tools/: middleware.py
