[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wncfe-query-inspector"
version = "1.0.3"
description = "A Django middleware package to print SQL queries to the terminal"
readme = "README.rst"
authors = [
	{name = "wncfe", email = "alekseip2002@gmail.com"}
]

dependencies = [
	"Pygments>=2.17.2","sqlparse>=0.4.4"
]

requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["wncfe-sql-tools"]

[project.urls]
Homepage = "https://github.com/wncfe"
